[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skypilot-admin-policy"
version = "0.1.0"
description = "SkyPilot admin policy: labels (sapCode, jobName), nodeSelector, affinity, tolerations for Kubernetes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "skypilot[aws,kubernetes]>=0.11.2",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
dev-dependencies = []
